// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizonCardHeader render does not render the sunrise field when it is not present in the data and it is disabled on the config 1`] = `
<div class="horizon-card-header">
</div>
`;

exports[`HorizonCardHeader render does not render the sunrise field when it is not present in the data but it is activated on the config 1`] = `
<div class="horizon-card-header">
  <div class="horizon-card-text-container">
    <div class="horizon-card-field-name">
      sunrise
    </div>
    <div class="horizon-card-field-value ">
      -
    </div>
  </div>
</div>
`;

exports[`HorizonCardHeader render does not render the sunrise field when it is present in the data but it is disabled on the config 1`] = `
<div class="horizon-card-header">
</div>
`;

exports[`HorizonCardHeader render does not render the sunset field when it is not present in the data and it is disabled on the config 1`] = `
<div class="horizon-card-header">
</div>
`;

exports[`HorizonCardHeader render does not render the sunset field when it is not present in the data but it is activated on the config 1`] = `
<div class="horizon-card-header">
  <div class="horizon-card-text-container">
    <div class="horizon-card-field-name">
      sunset
    </div>
    <div class="horizon-card-field-value ">
      -
    </div>
  </div>
</div>
`;

exports[`HorizonCardHeader render does not render the sunset field when it is present in the data but it is disabled on the config 1`] = `
<div class="horizon-card-header">
</div>
`;

exports[`HorizonCardHeader render does not render the title if it is not present in the configuration 1`] = `
<div class="horizon-card-header">
</div>
`;

exports[`HorizonCardHeader render renders the sunrise field when it is present in the data and it is activated on the config 1`] = `
<div class="horizon-card-header">
  <div class="horizon-card-text-container">
    <div class="horizon-card-field-name">
      sunrise
    </div>
    <div class="horizon-card-field-value ">
      0
    </div>
  </div>
</div>
`;

exports[`HorizonCardHeader render renders the sunset field when it is present in the data and it is activated on the config 1`] = `
<div class="horizon-card-header">
  <div class="horizon-card-text-container">
    <div class="horizon-card-field-name">
      sunset
    </div>
    <div class="horizon-card-field-value ">
      0
    </div>
  </div>
</div>
`;

exports[`HorizonCardHeader render renders the title if it is present in the configuration 1`] = `
<div class="horizon-card-title">
  test
</div>
<div class="horizon-card-header">
</div>
`;
